[project]
name = "mkdocs-note"
version = "1.0.2"
description = "A MkDocs plugin to add note boxes to your documentation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="virtualguard101", email="virtualguard101@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "mkdocs>=1.6.1",
    "colorlog>=6.9.0",
]

[project.urls]
Homepage = "https://github.com/virtualguard101/mkdocs-note"
Issues = "https://github.com/virtualguard101/mkdocs-note/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
test = [
    "pytest-cov",
]

[project.scripts]

[project.entry-points."mkdocs.plugins"]
mkdocs-note = "mkdocs_note.plugin:MkdocsNotePlugin"

# TestPyPI configuration for uv
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
