[project]
name = "mkdocs-note"
version = "1.2.4"
description = "A MkDocs plugin to add note boxes to your documentation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="virtualguard101", email="virtualguard101@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "mkdocs>=1.6.1",
    "colorlog>=6.9.0",
    "pyyaml>=6.0",
    "pymdown-extensions>=10.15"
]

[project.urls]
Homepage = "https://github.com/virtualguard101/mkdocs-note"
Issues = "https://github.com/virtualguard101/mkdocs-note/issues"

[project.optional-dependencies]
validate = [
    "pymdown-extensions>=10.0",
    "mkdocs-material>=8.0",
    "mkdocs-jupyter>=0.25.1",
]

full = [
    "mkdocs-material>=9.6.4",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
]

dev = [
    "pytest",
    "pytest-cov",
    "mkdocs-material>=9.6.4",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
    "pymdown-extensions>=10.0",
    "mkdocs-material==9.6.4"
]
test = [
    "pytest-cov",
]

[project.scripts]
mkdocs-note = "mkdocs_note.cli:cli"

[project.entry-points."mkdocs.plugins"]
mkdocs-note = "mkdocs_note.plugin:MkdocsNotePlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

# TestPyPI configuration for uv
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
