[project]
name = "mkdocs-note"
version = "3.0.0"
description = "A MkDocs plugin to add note boxes to your documentation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="virtualguard101", email="virtualguard101@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "mkdocs>=1.6.1",
    "colorlog>=6.9.0",
    "pyyaml>=6.0",
    "pymdown-extensions>=10.15",
    "mkdocs-material>=9.6.4",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
    "mkdocs-awesome-nav>=3.2.0",
]

[project.urls]
Repository = "https://github.com/virtualguard101/mkdocs-note"
Homepage = "https://blog.virtualguard101.com/mkdocs-note"
Issues = "https://github.com/virtualguard101/mkdocs-note/issues"

[project.optional-dependencies]
dev = [
    "click==8.2.1",
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "pytest-cov",
    "mkdocs-material>=9.6.4",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
    "pymdown-extensions>=10.0",
]

test = [
    "pytest-cov",
]

[project.scripts]
mkdocs-note = "mkdocs_note.cli:cli"

[project.entry-points."mkdocs.plugins"]
mkdocs-note = "mkdocs_note.plugin:MkdocsNotePlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Code formatting configuration
line-length = 88
[tool.ruff.format]
# Indentation style - tab
indent-style = "tab"
# Line length limit
# Quote style - double quotes
quote-style = "double"

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
# 忽略 __init__.py 文件中的 F401 (导入未被使用)
"__init__.py" = ["F401"]


[tool.uv]
package = true

# TestPyPI configuration for uv
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
